...
  static const formulaDropdown = ValueKey('formulaDropdown');
  static const weightField = ValueKey('weightField');
  static const heightField = ValueKey('heightField');
  static const genderDropdown = ValueKey('genderDropdown');
  static const ageField = ValueKey('ageField');
  static const btnReset = ValueKey('btnReset');
  static const bmrResultCard = ValueKey('bmrResultCard');
}

class _Str {
  const _Str._();
  static const appBarTitle = 'BMR';
  static const appBarSubtitle = 'Basal Metabolic Rate';
...
